stonfi_api_client/tests/ui/struct_literal_params.stderr
error[E0639]: cannot create non-exhaustive struct using struct expression
 --> tests/ui/struct_literal_params.rs:4:13
  |
4 |     let _ = PoolsParams { dex_v2: true };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
