stonfi_api_client/tests/ui/struct_literal_params.rs
use stonfi_api_client::v1::PoolsParams;

fn main() {
    let _ = PoolsParams { dex_v2: true };
}
